--- a/iflexiblelimited/single-work/zellij.html
+++ b/iflexiblelimited/single-work/zellij.html
@@ -40,7 +40,7 @@
                 <span class="title">Website:</span
                 ><a
                   class="text-style-underline"
-                  href="https://www.trialphatechnologies.com/zellijstudio/Zellij Design studio/index.php"
+                  href="https://www.trialphatechnologies.com/zellijstudio/Zellij Design Studio/index.php"
                 >
                   Click to visit</a
                 >
