--- a/iflexiblelimited/index.html
+++ b/iflexiblelimited/index.html
@@ -733,7 +733,7 @@
 
                          <!--Portfolio Item-->
                          <div class="item col-lg-4 col-sm-6 website">
-                            <a class="ajax-link" href="topfx-iframe.html">
+                            <a class="ajax-link" href="./single-work/topfx-iframe.html">
                                 <figure>
                                     <img src="img/portfolio/website-template03.JPG" alt="">
                                     <figcaption>
@@ -745,7 +745,7 @@
                         </div>
                          <!--Portfolio Item-->
                          <div class="item col-lg-4 col-sm-6 website">
-                            <a class="ajax-link" href="QSL-frame.html">
+                            <a class="ajax-link" href="./single-work/QSL-frame.html">
                                 <figure>
                                     <img src="img/portfolio/website-template14.png" alt="">
                                     <figcaption>
@@ -769,7 +769,7 @@
                         </div>
                          <!--Portfolio Item-->
                          <div class="item col-lg-4 col-sm-6 website">
-                            <a class="ajax-link" href="Newrich.html">
+                            <a class="ajax-link" href="./single-work/Newrich.html">
                                 <figure>
                                     <img src="img/portfolio/website-template13.png" alt="">
                                     <figcaption>
@@ -783,7 +783,7 @@
                          <!-- two emails end-->
                          <!--Portfolio Item-->
                          <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="ctrader-metatrader.html">
+                            <a class="ajax-link" href="./single-work/ctrader-metatrader.html">
                                 <figure>
                                     <img src="img/portfolio/img-1.jpg" alt="">
                                     <figcaption>
@@ -797,7 +797,7 @@
                        
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="nfp-bonus-30.html">
+                            <a class="ajax-link" href="./single-work/nfp-bonus-30.html">
                                 <figure>
                                     <img src="img/portfolio/email-02.jpg" alt="">
                                     <figcaption>
@@ -813,7 +813,7 @@
 
                          <!--Portfolio Item-->
                          <div class="item col-lg-4 col-sm-6 website">
-                            <a class="ajax-link" href="fondex.html">
+                            <a class="ajax-link" href="./single-work/fondex.html">
                                 <figure>
                                     <img src="img/portfolio/website-template04.JPG" alt="">
                                     <figcaption>
@@ -826,7 +826,7 @@
 
                          <!--Portfolio Item-->
                          <div class="item col-lg-4 col-sm-6 website">
-                            <a class="ajax-link" href="zellij.html">
+                            <a class="ajax-link" href="./single-work/zellij.html">
                                 <figure>
                                     <img src="img/portfolio/website-template05.JPG" alt="">
                                     <figcaption>
@@ -840,7 +840,7 @@
                       
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 website">
-                        <a class="ajax-link" href="learningResearch.html">
+                        <a class="ajax-link" href="./single-work/learningResearch.html">
                             <figure>
                                 <img src="img/portfolio/website-template12.png" alt="">
                                 <figcaption>
@@ -854,7 +854,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="ctrader-metatrader.html">
+                            <a class="ajax-link" href="./single-work/ctrader-metatrader.html">
                                 <figure>
                                     <img src="img/portfolio/img-1.jpg" alt="">
                                     <figcaption>
@@ -867,7 +867,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="nfp-bonus-30.html">
+                            <a class="ajax-link" href="./single-work/nfp-bonus-30.html">
                                 <figure>
                                     <img src="img/portfolio/email-02.jpg" alt="">
                                     <figcaption>
@@ -880,7 +880,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="fondex-01.html">
+                            <a class="ajax-link" href="./single-work/fondex-01.html">
                                 <figure>
                                     <img src="img/portfolio/email-07.jpg" alt="">
                                     <figcaption>
@@ -893,7 +893,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="ifx-expo.html">
+                            <a class="ajax-link" href="./single-work/ifx-expo.html">
                                 <figure>
                                     <img src="img/portfolio/email-03.jpg" alt="">
                                     <figcaption>
@@ -906,7 +906,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="new-year.html">
+                            <a class="ajax-link" href="./single-work/new-year.html">
                                 <figure>
                                     <img src="img/portfolio/email-04.jpg" alt="">
                                     <figcaption>
@@ -921,7 +921,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 email">
-                            <a class="ajax-link" href="topfx-client.html">
+                            <a class="ajax-link" href="./single-work/topfx-client.html">
                                 <figure>
                                     <img src="img/portfolio/email-06.jpg" alt="">
                                     <figcaption>
