updated index file

--- a/iflexiblelimited/index.html
+++ b/iflexiblelimited/index.html
@@ -198,7 +198,7 @@
                         <div class="col-lg-8">
                             <!--Personal Intro-->
                             <h3 class="mb-20"></h3>
-                            <p>Innovative, task-driven professional with 3+ years of experience as a Front-End Developer
+                            <p>Innovative, task-driven professional with 4+ years of experience as a Front-End Developer
                                 across diverse industries. Equipped with
                                 a record of success in consistently identifying and providing the technological needs of
                                 companies through ingenious innovation. Proficient in developing UI/UX designs using
@@ -620,10 +620,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--Coding Skill Item-->
+                            <div class="skill-item">
+                                <h4 class="progress-title"><i class="fab fa-css3-alt"></i> SASS</h4>
+                                <div class="progress">
+                                    <div class="progress-bar" data-progress-value="80">
+                                        <div class="progress-value">80%</div>
+                                    </div>
+                                </div>
+                            </div>
 
                             <!--Coding Skill Item-->
                             <div class="skill-item">
-                                <h4 class="progress-title">Javascript</h4>
+                                <h4 class="progress-title"><i class="fab fa-js"></i>Javascript</h4>
                                 <div class="progress">
                                     <div class="progress-bar" data-progress-value="75">
                                         <div class="progress-value">75%</div>
@@ -643,6 +652,15 @@
                             <!--code Skill Item-->
                             <div class="skill-item">
                                 <h4 class="progress-title"><i class="fa fa-language"></i> React JS</h4>
+                                <div class="progress">
+                                    <div class="progress-bar" data-progress-value="65">
+                                        <div class="progress-value">65%</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--code Skill Item-->
+                            <div class="skill-item">
+                                <h4 class="progress-title"><i class="fa fa-language"></i> Git/Github/Azure Devops</h4>
                                 <div class="progress">
                                     <div class="progress-bar" data-progress-value="65">
                                         <div class="progress-value">65%</div>
@@ -680,7 +698,7 @@
 
                             <!--Design Skill Item-->
                             <div class="skill-item">
-                                <h4 class="progress-title">Adobe xd</h4>
+                                <h4 class="progress-title"><i class="fa fa-language"></i>Adobe xd</h4>
                                 <div class="progress">
                                     <div class="progress-bar" data-progress-value="84">
                                         <div class="progress-value">84%</div>
@@ -689,7 +707,7 @@
                             </div>
                             <!--Design Skill Item-->
                             <div class="skill-item">
-                                <h4 class="progress-title">Figma</h4>
+                                <h4 class="progress-title"><i class="fa fa-language"></i>Figma</h4>
                                 <div class="progress">
                                     <div class="progress-bar" data-progress-value="84">
                                         <div class="progress-value">84%</div>
