--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -82,7 +82,7 @@
                     <p class="text-white text-center">Act now and become one of the thousands of profitable investors...</p>
                 </div>
                 <div class="container mt-5">
-                    <div class="row gap-3 gap-lg-0 align-items-stretch">
+                    <div class="row gap-3 gap-lg-0 align-items-stretch hero-section">
                         <div class="col-lg-5 pt-0 px-2 px-lg-4 d-flex sectionsignup">
                             <form class="bg-white p-5 rounded-3 px-4" action="" id="registerationForm">
                                 <lable>Name:</lable>
@@ -99,7 +99,7 @@
                             </form>
                         </div>
                         <div class="col-lg-6">
-                            <img src="./assets/hero-img-1.jpg" alt="" style="height:500px;width:100%">
+                            <img class="hero-img" src="./assets/hero-img-1.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -124,21 +124,21 @@
                         <div class="col-lg-3 bg-white text-center rounded-3">
                             <div class="bg-dark" style="width:75px;height: 70px; display: inline-block;padding-top:18px; margin-top:-27px;"><i class="fa-solid fa-address-card text-white text-center" style="font-size:32px !important;"></i></div>
                             <h3 class="pt-3">Register Your Account</h3>
-                            <p class="" style="line-height:20px;">All you need to register is your basic information. Registration with Bitcode Prime is free
+                            <p class="" style="line-height:17px;font-size:14px;">All you need to register is your basic information. Registration with Bitcode Prime is free
                                 of charge. Complete the form below and wait for a dedicated account manager to call you soon
                                 after.</p>
                         </div>
                         <div class="col-lg-3 bg-white text-center rounded-3">
                             <div class="bg-dark" style="width:75px;height: 70px; display: inline-block;padding-top:18px; margin-top:-27px;"><i class="fa-solid fa-address-card text-white text-center" style="font-size:32px !important;"></i></div>
                             <h3 class="pt-3">Make a Minimum Deposit</h3>
-                            <p style="line-height:20px;">To successfully trade on Bitcode Prime, you need to make a deposit of €250. This deposit is
+                            <p style="line-height:17px;font-size:14px;">To successfully trade on Bitcode Prime, you need to make a deposit of €250. This deposit is
                                 not your registration fee. It is basically your first initial capital investment and will be
                                 used to place your first trade.</p>
                         </div>
                         <div class="col-lg-3 bg-white text-center rounded-3">
                             <div class="bg-dark" style="width:75px;height: 70px; display: inline-block;padding-top:18px; margin-top:-27px;"><i class="fa-solid fa-address-card text-white text-center" style="font-size:32px !important;"></i></div>
                             <h3 class="pt-3">Enter Live Trading</h3>
-                            <p style="line-height:20px;">For the more experienced users, interested in jumping straight in, all you need to do is make
+                            <p style="line-height:17px;font-size:14px;">For the more experienced users, interested in jumping straight in, all you need to do is make
                                 your deposit. The live trading account is where the action happens. All you need to make
                                 sure of is that your account manager helps you configure your settings. Including a
                                 stop-loss limit and when trading sessions should be opened and closed.</p>
