serviced apartment fixed

--- a/iflexiblelimited/index.html
+++ b/iflexiblelimited/index.html
@@ -787,7 +787,7 @@
                         </div>
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 website">
-                            <a class="ajax-link" href="servicedapartment.html">
+                            <a class="ajax-link" href="./single-work/servicedapartment.html">
                                 <figure>
                                     <img src="img/portfolio/website-template11.png" alt="">
                                     <figcaption>
