--- a/iflexiblelimited/single-work/servicedapartment.html
+++ b/iflexiblelimited/single-work/servicedapartment.html
@@ -1,43 +1,57 @@
 <html lang="en">
-<head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Single Ajax Portfolio</title>
-	<style type="text/css">@media (max-width:480px){
-    .frame{
-        width:355px;
-        height:10000px;
-    }
 
-}
-	</style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Single Ajax Portfolio</title>
+    <style type="text/css">
+        @media (max-width:480px) {
+            .frame {
+                width: 355px;
+                height: 10000px;
+            }
+
+        }
+    </style>
 </head>
+
 <body>
-<div class="single-work">
-<div class="container">
-<div class="row text-center"><!-- offset-md-1 -->
-<div class="col-md-12  mb-40">
-<h1 class="title mb-30">Serviced Apartments</h1>
+    <div class="single-work">
+        <div class="container">
+            <div class="row text-center"><!-- offset-md-1 -->
+                <div class="col-md-12  mb-40">
+                    <h1 class="title mb-30">Serviced Apartments</h1>
 
-<p class="mb-30">Serviced apartments are fast becoming a popular choice for leisure and business travellers in London and major cities around the UK. If you&rsquo;re looking for a place to live rather than just sleep, they&rsquo;re the ideal accommodation solution. But what does a serviced apartment stay include and what are the benefits? Here are our top 10 reasons to stay in serviced apartments</p>
+                    <p class="mb-30">Serviced apartments are fast becoming a popular choice for leisure and business
+                        travellers in London and major cities around the UK. If you&rsquo;re looking for a place to live
+                        rather than just sleep, they&rsquo;re the ideal accommodation solution. But what does a serviced
+                        apartment stay include and what are the benefits? Here are our top 10 reasons to stay in
+                        serviced apartments</p>
 
-<ul class="information">
-	<li><span class="title">Client:</span> Serviced Apartments</li>
-	
-    </li>
-	<li><span class="title">Website:</span> <a href="https://www.servicedapartment.com.co" class="text-style-underline"> www.servicedapartment.com</a></li>
-	<li><span class="title">Category:</span> website</li>
-</ul>
-<!-- <iframe class="border-0 frame" id="scrollbar1" src="https://www.zellijstudio.com" width="1200" height="7900">
+                    <ul class="information">
+                        <li><span class="title">Client:</span> Serviced Apartments</li>
+
+                        </li>
+                        <li><span class="title">Website:</span> <a href="https://www.servicedapartment.com.co"
+                                class="text-style-underline"> www.servicedapartment.com</a></li>
+                        <li><span class="title">Category:</span> website</li>
+                    </ul>
+                    <!-- <iframe class="border-0 frame" id="scrollbar1" src="https://www.zellijstudio.com" width="1200" height="7900">
 
                     </iframe> -->
 
-<figure class="mt-30"><img alt="" src="img/single-work/The-Serviced-Apartment-Group.png" /></figure>
+                    <figure class="mt-30"><img alt="" src="img/single-work/The-Serviced-Apartment-Group.png" /></figure>
 
-<figure class="mt-30"><img alt="" src="img/single-work/The-Serviced-Apartment-Group-about.png" /></figure>
+                    <figure class="mt-30"><img alt="" src="img/single-work/The-Serviced-Apartment-Group-about.png" />
+                    </figure>
 
-<figure class="mt-30"><img alt="" src="img/single-work/The-Serviced-Apartment-Group-single-apart.png" /></figure>
-</div>
-</div>
-</div>
-</div>
+                    <figure class="mt-30"><img alt=""
+                            src="img/single-work/The-Serviced-Apartment-Group-single-apart.png" /></figure>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
