--- a/iflexiblelimited/index.html
+++ b/iflexiblelimited/index.html
@@ -1277,8 +1277,9 @@
                 <div class="google-map">
                     <div id="map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.080580152963!2d28.753456512048686!3d41.10917125851436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa8b9c7120ef5%3A0x8e886f3158b6e551!2sKaya%C5%9Fehir+Akik+Sitesi!5e0!3m2!1str!2str!4v1564402199617!5m2!1str!2str"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3224.1116302330693!2d73.05271303356562!3d33.71967844315822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbf0c1fb69225%3A0xc9b91a59fa609fc0!2sHQ!5e0!3m2!1sen!2sqa!4v1736825459782!5m2!1sen!2sqa"
                             width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+                           
                     </div>
                 </div>
                 <!--Google Map End-->
